<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_name_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name_element"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txt_email_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_element"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txt_phone_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_phone_element"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginVertical="10dp"/>

</LinearLayout>